<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.guilhermeguini.sunshine.DetailActivity">

    <item
        android:id="@+id/action_shared"
        android:icon="@drawable/ic_action_shared"
        android:title="@string/action_shared"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_message"
        android:icon="@drawable/ic_action_message"
        android:title="@string/action_message"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
